# retail-bi-pipeline

./: .gitignore  README.md  pyproject.toml  retail_audit_and_pipeline.ipynb  uv-clean.bat  uv-install.bat  uv-make.bat  uv-run.bat  Финальный проект_ИАВД-11_задание.docx
notes/: _docx_assignment_extracted.txt  _unicode_test.txt  data_analysis_notes.md  datalens_dashboard_plan.md  retail_bi_target_model.md  retail_data_audit.md  star_schema_diagram.md  web_claude_briefing.md
src/: __init__.py  classification.py  config.py  dimensions.py  export.py  facts.py  io_utils.py  normalization.py  pipeline.py  profiling.py  qa.py  utils.py
