[project]
name = "retail-bi-pipeline"
version = "0.1.0"
description = "Audit-first BI pipeline for Retail.xlsx"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.1,<3",
    "openpyxl>=3.1,<4",
    "pandas>=2.2,<3",
    "pyarrow>=16,<20",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29,<7",
    "jupyter>=1.1,<2",
    "matplotlib>=3.9,<4",
    "nbformat>=5.10,<6",
    "notebook>=7.2,<8",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
